some checkstyle issues